🔒 Make Tableau submission checklist private
🔐 PRIVACY IMPROVEMENTS:
- Added TABLEAU_SUBMISSION_CHECKLIST.md to .gitignore
- Removed file from Git tracking (kept locally)
- Updated README.md to remove reference to private checklist

✨ BENEFITS:
- Assignment-specific content now private
- Cleaner public repository presentation
- Maintains professional portfolio appearance
- Keeps submission process confidential

🎯 RESULT:
- Repository focused on technical work and analysis
- Private submission guidelines maintained locally
- Enhanced repository professionalism

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ project_instructions.txt
 *_tutorial.txt
 README_instructions.md
 
+# Assignment-specific submission files (keep private)
+documentation/TABLEAU_SUBMISSION_CHECKLIST.md
+
 # Python virtual environment
 uber_analysis_env/
 venv/
